test/spec_vectors/select/fail/module_19.wat
(module (func $type-1st-operand-empty-in-block (i32.const 0) (i32.const 0) (i32.const 0) (block (select) (drop))))